Fixed light not showing up if number updated Added check if number already exists for updating light About: linked changelog and spiced up the logo with an interactive twist TODO and CHANGELOG update

--- a/electron-vite-project/src/components/Settings.css
+++ b/electron-vite-project/src/components/Settings.css
@@ -244,3 +244,16 @@
   position: relative;
   margin-right: 5px;
 }
+
+.logoReflection {
+  height: 200px;
+  width: 200px;
+  mask: url(../assets/iconReflection.png);
+  mask-repeat: no-repeat;
+  background: var(--secondary);
+  mask-position: center;
+  top: -72px;
+  right: 72px;
+  position: absolute;
+  transform: scale(0.31);
+}
